--- a/layouts/partials/site-nav.html
+++ b/layouts/partials/site-nav.html
@@ -2,49 +2,42 @@
 
 
 
-<nav class="flex center w-100 bg-primary-color-dark bb b--dark-gray" role="navigation">
+<nav class="flex items-center justify-center w-100 bg-primary-color-dark bb b--dark-gray" role="navigation">
 
-  <div class="pv4 center items-center justify-center w-auto dn-lx dib-l">
-      <div class="center items-center justify-center "> 
-          <div class="flex">
-              <h1 class="dim f4 lh-solid ml0-ns mr0 mr3-l mv0 pr4 pl4-ns">
-                <a href="{{ .Site.BaseURL }}" class="link white">
-                  {{ partial "svg/senboll-logo.svg" (dict "size" "64px" ) }}
-                </a>
-              </h1>
-              <ul class="list mb0">
-                {{ range .Site.Menus.global }}
-                  <li class="f4 dib mr4-l ml4-l mh2" role="menuitem">
-                      {{/* TODO: Create an "Global" active class to show which site one is currently at */}}
-                    <a href="{{ .URL }}" class="dim link{{ if $currentPage.IsMenuCurrent "global" . }} gray {{else}} light-silver{{ end }}">
-                      {{ .Name }}
-                        {{/* using ".Post" from the menu system to determine if we should show an icon for external links */}}
-                      {{ $post_status := printf "%s" .Post }}
-                      {{ if eq $post_status "external" }}
-                        <span class="pl1">
-                          {{ partial "svg/link-ext.svg" (dict "size" "5") }}
-                        </span>
-                      {{ end }}
-                    </a>
-                  </li>
-                {{ end }}
-              </ul>
-      
-          </div>     
-      </div>  
-  </div>
+  <div class="flex items-center justify-center dn-lx dib-l w-80">
+    <div class="flex items-center justify-center pv0 f4 tc w-20">
+      {{ partial "svg/senboll-logo.svg" (dict "size" "48px" ) }}
+    </div>
+    <ul class="list flex items-center justify-between w-60">
+      {{ range .Site.Menus.global }}
+        <li class="f4 dib tc" role="menuitem">
+            {{/* TODO: Create an "Global" active class to show which site one is currently at */}}
+          <a href="{{ .URL }}" class="dim link{{ if $currentPage.IsMenuCurrent "global" . }} gray {{else}} light-silver{{ end }}">
+            {{ .Name }}
+              {{/* using ".Post" from the menu system to determine if we should show an icon for external links */}}
+            {{ $post_status := printf "%s" .Post }}
+            {{ if eq $post_status "external" }}
+              <span class="pl1">
+                {{ partial "svg/link-ext.svg" (dict "size" "5") }}
+              </span>
+            {{ end }}
+          </a>
+        </li>
+      {{ end }}
+    </ul>   
+  </div> 
 <!-- 
   <span class="pv4 absolute mt1 mt2-l pr3 right-0 top-0 dn dib-l">
   {{- partialCached "social-follow.html" . -}}
   </span> -->
 
-  <div id="menu-search-input" aria-hidden="true" aria-expanded="false" class="pr5 pv4 dn-m dn-ns">
+  <div id="menu-search-input" aria-hidden="true" aria-expanded="false" class="dn-m dn-ns w-30">
     {{if not .Site.Params.isDisableSearch}}
       {{- partial "site-search.html" . -}}
     {{end}}
   </div>  
 
-  <div id="nav-mobile" aria-expanded="false" class="top-0 dn-l w-100">
+  <div id="nav-mobile" aria-expanded="false" class=" dn-l w-100">
     {{- partial "nav-mobile.html" . -}}
   </div>
 
